tests/scripts/errors/lex/unterminated_bt_interp.cdo
VAR s = `hello ${ 1 + 2 `;
print(s);
